# vizard

./: .gitignore  .vizard_state.json  CLAUDE.md  README.md  STEP1_DELIVERABLE_SUMMARY.md  avidia.ipynb  pyproject.toml  setup.sh  template.ipynb  uninstall.sh  vizard  vizard_tests1.ipynb
.ipynb_checkpoints/: avidia-develpmentipynb-checkpoint  generate_images-checkpoint.ipynb  vizard-checkpoint.ipynb  vizard_tests1-checkpoint.ipynb
.virtual_documents/: generate_images.ipynb
aux/: avg_2_2_CHH.csv  capture.gatk.metrics  capture2.gatk.metrics  insert_len_human.csv  prct_2_CHH_background_2.csv
lib/: patch_global_cc_jupyter.sh  patch_jupyter_magic.sh
lib/vizard_magic/: __init__.py
old/: CLAUDE_251213.md  CLAUDE_251214.md  CLAUDE_251215.md  CLAUDE_251216.md  CLAUDE_251217.md  CLAUDE_251218.md
prompts/: CLAUDE_lit.md
templates/: CLAUDE.md  CLAUDE_v1.md  purge_manifest.txt  pyproject.toml  vizard_template.ipynb
templates/old/: CLAUDE_251213.md
test/: README_IMAGE_GENERATION.md  VIZARD_TEST_GUIDE.md  generate_images.ipynb  generate_sample_data.py  sample_data.csv  vizards_test.ipynb  vz_0_state_test.ipynb  vz_1_polars_test.ipynb  vz_2_polars_test.ipynb  vz_3_polars_test.ipynb  vz_4_polars_altair_test.ipynb  vz_5_layering_test.ipynb  vz_polars_advanced_2_test.ipynb  vz_polars_advanced_test.ipynb  vz_polars_altair_test.ipynb  vz_polars_test.ipynb  vz_test.ipynb
test/.ipynb_checkpoints/: generate_images-checkpoint.ipynb
test/.virtual_documents/: generate_images.ipynb
test/data/: data.csv  diff_expression.csv  expression.csv  expression_matrix.csv  genes.csv  (+3 more)
