[project]
name = "notellm-workspace"
version = "0.1.0"
description = "Jupyter + Claude Code workspace"
requires-python = ">=3.12"

dependencies = [
    # Core data science
    "pandas>=2.2",
    "numpy>=2.0",
    "polars>=1.0",
    "pyarrow>=14.0",

    # Visualization
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "altair>=5.3",
    "vl-convert-python",
    "vegafusion[embed]>=1.6",
    # JupyterLab + collaboration (collaboration breaks things)
    "jupyterlab==4.0.9",

    # Claude Code Jupyter magic (pinned - archived in lib/vendor/)
    "claude-code-jupyter-staging==0.0.1",
]
