[project]
name = "vizard"
version = "0.1.0"
description = "DSL to Develop Figures in Jupyter Notevooks"
requires-python = ">=3.12"

dependencies = [
    #"claude-code-jupyter-staging==0.0.1",
    "claude-code-jupyter-staging>=0.0.1",

    # Core data science
    "pandas>=2.2",
    "numpy>=2.0",
    "polars>=1.35",
    "pyarrow>=14.0",

    # Visualization
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "altair>=6.0",
    "vl-convert-python",
    "vegafusion[embed]>=1.6",
    # JupyterLab + collaboration (collaboration breaks things)
    "jupyterlab==4.0.9",
    
]
